# Slack-Cleanup

./: .gitignore  .gitingore  README.md  auth.yaml.example  cfg.py  config.py  config.yaml  export.py  helpers.py  main.py  pyproject.toml  slack_api.py
tests/: common.py  test_cli.py  test_export.py  test_helpers.py  test_slack.py
