[tool.poetry]
name = "slack_cleanup"
version = "0.1.0"
description = ""
authors = ["Nikolas Papaioannou <nikolas@mnemonic.no>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
slack-sdk = "^3.15.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
